--- a/view/modelBox.html
+++ b/view/modelBox.html
@@ -2,23 +2,23 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-          <h2>{{list.activeTurtle.type}}</h2>
+          <h2>{{list.activeTurtleObj.type}}</h2>
       </div>
       <div class="modal-body">
         <div class="row">
           <div class="col-xs-8 col-xs-offset-2">
-            <img class="img-rounded img-responsive" src="{{list.activeTurtle.image_url}}"/>
+            <img class="img-rounded img-responsive" src="{{list.activeTurtleObj.image_url}}"/>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
-            <p><strong>Locations: </strong>{{list.activeTurtle.locations}}</p>
-            <p><strong>Size: </strong>{{list.activeTurtle.size}}</p>
-            <p><strong>Average Lifespan: </strong>{{list.activeTurtle.lifespan}}</p>
-            <p><strong>Diet: </strong>{{list.activeTurtle.diet}}</p>
+            <p><strong>Locations: </strong>{{list.activeTurtleObj.locations}}</p>
+            <p><strong>Size: </strong>{{list.activeTurtleObj.size}}</p>
+            <p><strong>Average Lifespan: </strong>{{list.activeTurtleObj.lifespan}}</p>
+            <p><strong>Diet: </strong>{{list.activeTurtleObj.diet}}</p>
           </div>
           <div class="col-xs-12">
-              <p>{{list.activeTurtle.description}}</p>
+              <p>{{list.activeTurtleObj.description}}</p>
               <button class="btn btn-danger pull-right"
               data-dismiss="modal">
               Close
