--- a/view/quizView.html
+++ b/view/quizView.html
@@ -1,3 +1,3 @@
-<div class="quiz" ng-controller="quizCtrl">
-  {{data}}
-</div>
+<div class="quiz" ng-controller="quizCtrl as quiz" ng-show="quiz.quizMetricFactObj.isShowQuiz">
+
+</div>	
