--- a/style/custom.css
+++ b/style/custom.css
@@ -5,3 +5,11 @@
 img{
   opacity: 0;
 }
+.answer{
+    padding: 15px 20px;
+    border-radius: 10px;
+    border: 1px solid #bbb;
+}
+.answer:hover{
+    cursor: pointer;
+}
