--- a/style/custom.css
+++ b/style/custom.css
@@ -13,3 +13,18 @@ img{
 .answer:hover{
     cursor: pointer;
 }
+.image-answer{
+    cursor: pointer;
+    height: 350px;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+.image-answer img{
+    width: 100%;
+    height: auto;
+}
+.image-selected{
+    border: 3px solid #56afdc;
+}
