commited at home on sanday 10/09/17

--- a/view/quizView.html
+++ b/view/quizView.html
@@ -3,7 +3,7 @@
     <div class="col-xs-8">
       <h2>Progress</h2>
       <div class="btn-toolbar">
-        <button class="btn" ng-repeat="currentQuestionObj in quiz.quizDataObj" ng-class="{'btn-info' :currentQuestionObj.selected !==null,'btn-danger':currentQuestionObj.selected === null}" ng-click="quiz.setActiveQuestion($index)">
+        <button class="btn" ng-repeat="currentQuestionObj in quiz.quizDataObj"  ng-class="{'btn-success': currentQuestionObj.correct, 'btn-danger': !currentQuestionObj.correct}" ng-click="results.setActiveQuestion($index)">
                   <span class="glyphicon"
                     ng-class="{'glyphicon-pencil': currentQuestionObj.selected !==null , 'glyphicon-question-sign':currentQuestionObj.selected === null }"
                   ></span>
@@ -13,16 +13,16 @@
     <div class="col-xs-4">
       <h4>Legend:</h4>
       <div class="col-sm-4">
-        <button class="btn btn-info">
+        <button class="btn btn-success">
                 <span class="glyphicon glyphicon-pencil"></span>
             </button>
-        <p>Answered</p>
+        <p>Correct</p>
       </div>
       <div class="col-sm-4">
         <button class="btn btn-danger">
                 <span class="glyphicon glyphicon-question-sign"></span>
             </button>
-        <p>Unanswered</p>
+        <p>Incorrect</p>
       </div>
     </div>
   </div>
@@ -39,9 +39,22 @@
       </div>
     </div>
   </div>
+   <div class="row" ng-if="quiz.selectedFlags">   
+    <div class="well well-sm">
+      <div class="row">
+        <div class="col-xs-12">
+          <!-- Question Area -->
+          <h4>You have select answer</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  
   <div class="row">
     <div class="col-sm-6" ng-repeat="ans in quiz.quizDataObj[quiz.activeQuestionCount].possibilities" ng-if="quiz.quizDataObj[quiz.activeQuestionCount].type === 'text'">
-      <h4 class="answer" ng-class="{'btn-info' : $index === quiz.quizDataObj[quiz.activeQuestionCount].selected}" ng-click="quiz.selectAnswerFn($index)">
+      <h4 class="answer" ng-class="{'btn-info' : $index === quiz.quizDataObj[quiz.activeQuestionCount].selected}" ng-click="quiz.currentAnsOptfn($index)">
       {{ans.answer}}
     </h4>
     </div>
@@ -49,13 +62,23 @@
     <div class="col-sm-6" ng-repeat="ans in quiz.quizDataObj[quiz.activeQuestionCount].possibilities" ng-if="quiz.quizDataObj[quiz.activeQuestionCount].type === 'image'">
       <div class="image-answer"
       ng-class="{'image-selected': $index === quiz.quizDataObj[quiz.activeQuestionCount].selected}"
-                  ng-click="quiz.selectAnswerFn($index)"
+                  ng-click="quiz.currentAnsOptfn($index)"
       >
         <img class="well-image img-rounded" ng-src="{{ans.answer}}" alt="">
       </div>
     </div>
 
   </div>
-  <button class="btn btn-warning pull-right" ng-click="quiz.questionAnsweredFn()">Continue</button>
+  <button class="btn btn-warning pull-right" ng-click="quiz.contBtnClick()" ng-disabled="quiz.activeQuestionCount === quiz.quizDataObj.length">Continue</button>
+
+  <div class="row">
+    <div class="result" ng-if="quiz.quizMetricFactObj.showResult">
+        <h3>Final Result is</h3>
+        <h3>Correct Answer Count {{quiz.quizMetricFactObj.numCorrect}}</h3>
+        <h3>Percentage {{(quiz.quizMetricFactObj.numCorrect / quiz.quizDataObj.length) * 100}}  </h3>    
+    </div>
+  </div>
 
 </div>
+
+
